style.css
/* ... */
	@media (width > 400px) {
		form{

			width: clamp(20rem, 50vw, 26rem);
		}
		}





dialog{
	height: max-content;
	min-height: 100vh;

	display: none;
	flex-direction: column; 
	align-items: center;
	justify-content: center;

	gap: var(--size-1);
	background-color: var(--primary-color);
	pointer-events: none;

	#card-buttons{
		display: flex;
		gap: var(--size-0);
	}
	
	#card{
		/* border: var(--border-style); */
		padding: var(--size-3);
		margin: var(--size-0);
		width: 100%;
		opacity: 1;
		background-color: var(--third-color);
		corner-shape: bevel;
		border-radius:  var(--border-radius-large);
		outline: var(--border-style-solid-1);
  		outline-offset: calc(var(--size-0) * -1);

		@media (width > 400px) {
			width: clamp(20rem, 50vw, 26rem);
	
		}
		
		&.highlight {
				animation-name: highlight-transition;
				animation-duration: 1200ms;
				animation-iteration-count: 1;
				animation-fill-mode: forwards; /* Keep the final state of the animation. */
			}
		
		#ingredient-list{
			display: flex;
			flex-direction: column;
			height: max-content;

			#recipe-name, #recipe-description{
				text-transform: capitalize;
				padding-block-end: var(--size-1);
			}
			h2{
				font-family: var(--font-deco);
				font-size: var(--size-3);
				line-height: var(--size-3);
			}
			
			#recipe-description{
				font-size: var(--size-2);
				border-bottom: var(--border-style-solid-1);
			}

			#mobile-glass{
					position: absolute;
					height: 100%;
					scale: 0.85;
					opacity: 0.6;

					pointer-events: none;
					z-index: -1;
					margin: calc(var(--size-1)* -1);
					
					@media (width > 600px) {
							display: none;
					}
				}

			#ingredients-img{
				height: min-content;
				display: flex;
				align-items: flex-start;
				justify-content: space-between;
				padding-block: var(--size-1);
	
				
				#desktop-glass{
					display: none;
					pointer-events: none;
					z-index: 1;
					opacity: 0;
				}
				@media (width > 600px) {
					#desktop-glass{
						display: flex;
						max-height: 11rem;
						opacity: 1;
					}
				}

				#ingredients{
					display: grid;
					grid-template-columns: repeat(2, 1fr);
					gap: var(--size-1);
	
					#base-section, #mixer-section,#garnish-section, #scales-section{
						display: flex;
						flex-direction: column;
						gap: 0;
					}

				@media (width > 600px) {
					grid-template-columns: repeat(1, 1fr);
				}
				}
	
			}
			#scales-section{
					display: flex;
					flex-direction: row;
					gap: var(--size-1);
					border-top: var(--border-style-solid-1);
					padding-block-start: var(--size-1);
				}
				
				
			#error-state{
				background-color: var(--primary-color);
				color: var(--secondary-color);

				padding: var(--size-1);
				margin: calc(var(--size-1)* -1);
				
				display: flex;
				flex-direction: column;
				gap: var(--size-2);
				
				#error-state, p{
					color: var(--forth-color);
				}
				#error-statement{
					color: var(--forth-color);
					font-family: var(--font-serif);
					text-transform: none;
					font-size: var(--size-2);
				}

			}

		}
}

	#card #ingredient-list h3, #card #ingredient-list #error-state p{
		font-family: var(--font-mono);
		text-transform: uppercase;
		color: var(--forth-color);
		font-size: var(--size-0);
	}

	#close, #card #ingredient-list h3, #card #ingredient-list #error-state p{
		line-height: var(--size-2);
	}
	

	&[open] { 
		display: flex;
		pointer-events: visible;
		width: 100vw;
		height: 100vh;
		overflow: hidden;
	}
	
	@media (width > 600px) {
		&[open] {
			height: 100vh;
		}


	}

	&::backdrop {
		background-color: rgb(0 0 0 / 66%); /* A dark overlay. */
		pointer-events: none; /* Let clicks pass through to our `document` listener. */
	}


}



@keyframes highlight-transition {
				0% {
					transform: translateY(var(--size-0));
					opacity: 0.5;
				}
				100% {
					transform: translateY(0);
					opacity: 1;
				}
			}


@keyframes page-intro-body {
				0% {
					background-color: var(--primary-color);
				}

				75% {
					background-color: var(--primary-color);
				}


				100% {
					background-color: var(--third-color);
				}
}

@keyframes page-intro {
				0% {
					opacity: 1;
				}

				60% {

					opacity: 1;
				}

				90% {
		
					opacity: 0;
				}

				100% {
		
					opacity: 0;
				}
			}

@keyframes page-intro-form {
				0% {
					transform: translateY(var(--size-0));
					opacity: 0;
				}

				70% {
					transform: translateY(var(--size-0));
					opacity: 0;
				}
				100% {
					transform: translateY(0);
					opacity: 1;
				}
			}

